# iijmio-application-indicator

./: .gitignore  LICENSE  README.md  configure.ac
src/: Makefile.am  iijmio-indicator.c  iijmio-indicator.h
